--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "globals": "^17.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.8.1"
+  },
+  "dependencies": {
+    "@types/jest": "^30.0.0",
+    "axios": "^1.6.2",
+    "jest": "^30.2.0"
   }
 }
